# cybersec-classifier

./: .copier-answers.yml  .cruft.json  Containerfile  README.md  app.py  build_container.sh  openapi3_1.yml  pyproject.toml
.github/workflows/: build.yml  build_and_merge.yml  release.yml  smoke_test.yml  test.yml  test_and_build.yml
cybersec_classifier/: __init__.py  __main__.py  bart_mnli.py  config.py  cybersec_mlp.py  decorators.py  log.py  predictor_factory.py  router.py
cybersec_classifier/tests/: conftest.py  test_cybersec_classification.py  test_function.py
docker/: compose.e2e.yml  compose.yml
tests/: conftest.py  test_function.py
