[project]
name = "cybersec-classifier"
description = "A Bot classifying News Items into Cybersecurity/Non-Cybersecurity"
readme = "README.md"
license = {file = "LICENSE.md"}
maintainers = [{ name = "AIT", email = "lukas.linauer@ait.ac.at" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.1",
    "sentence-transformers>=5.1.0",
    "taranis_base_bot"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
"Source Code" = "https://github.com/taranis-ai/cybersec-classifier"

[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
tag_regex = "^refs/pull/(\\d+)/merge$"

[tool.setuptools]
packages = ["cybersec_classifier"]

[tool.ruff]
line-length = 142
target-version = "py312"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*_app_ctx_stack.*:DeprecationWarning",
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]

[tool.uv.sources]
taranis_base_bot = { path = "../taranis_base_bot" }